changed name of the application

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-todo",
+  "name": "NoteX",
   "version": "1.0.0",
   "description": "TODO list desktop app",
   "main": "main.js",
